--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,6 +31,7 @@
               android:layout_marginEnd="0dp" app:layout_constraintStart_toStartOf="parent"
               android:layout_marginStart="0dp"
               android:background="@drawable/login_id_box"
+              android:singleLine="true"
               android:paddingHorizontal="20dp"
               android:hint="ID"/>
 
@@ -41,6 +42,7 @@
               android:layout_marginEnd="0dp" app:layout_constraintStart_toStartOf="parent"
               android:layout_marginStart="0dp"
               android:paddingHorizontal="20dp"
+              android:singleLine="true"
               android:inputType="textPassword"
               android:hint="Password"/>
 
