--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context=".ui.register.RegisterActivity"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
+
+<androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.register.RegisterActivity"
         android:background="@color/white_gray">
-
     <androidx.appcompat.widget.AppCompatImageView android:layout_width="130dp" android:layout_height="130dp"
                                                   android:id="@+id/imgViewUserImg"
                                                   android:src="@drawable/user_image"
@@ -23,7 +26,7 @@
             android:id="@+id/btnGallery"
             android:background="@drawable/gallery_btn"
             android:layout_width="55dp" android:layout_height="55dp"
-            app:layout_constraintEnd_toEndOf="@+id/imgViewUserImg" android:layout_marginEnd="0dp"
+            app:layout_constraintEnd_toEndOf="@id/imgViewUserImg" android:layout_marginEnd="0dp"
             android:layout_marginBottom="0dp" app:layout_constraintBottom_toBottomOf="@+id/imgViewUserImg"/>
 
     <!--ID 입력-->
@@ -139,4 +142,9 @@
             android:gravity="center"
     />
 
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+</ScrollView>
